force-app/main/default/objects/Account/fields/cgcloud_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>cgcloud_Account_Email__c</fullName>
    <description>Dirección de correo electrónico de la cuenta</description>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>