force-app/main/default/objects/Account/fields/cu_autoriza_tratamiendo_datos__c.field-meta.xml
<CustomField>
    <fullName>cu_autoriza_tratamiendo_datos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoriza Tratamiento de Datos Personales</label>
    <type>Checkbox</type>
</CustomField>