force-app/main/default/objects/Account/fields/cu_canal__c.field-meta.xml
<CustomField>
    <fullName>cu_canal__c</fullName>
    <description>Canal de distribución del cliente según el ERP.</description>
    <label>Canal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autoservicio</fullName>
            </value>
            <value>
                <fullName>Hard Discount</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Distribuidores</fullName>
            </value>
            <value>
                <fullName>Geográfico</fullName>
            </value>
            <value>
                <fullName>Puntos de Venta</fullName>
            </value>
            <value>
                <fullName>Kioscos</fullName>
            </value>
            <value>
                <fullName>Alternativo</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>