force-app/main/default/objects/Account/fields/cu_canal_favorito_compra__c.field-meta.xml
<CustomField>
    <fullName>cu_canal_favorito_compra__c</fullName>
    <description>Canal de Compra preferido</description>
    <label>Canal favorito de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Call center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>