force-app/main/default/objects/Account/fields/cu_clasificacion_cliente__c.field-meta.xml
<CustomField>
    <fullName>cu_clasificacion_cliente__c</fullName>
    <label>Clasificación cliente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cu_tipo_establecimiento__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tipo A</fullName>
            </value>
            <value>
                <fullName>Tipo B</fullName>
            </value>
            <value>
                <fullName>Tipo C</fullName>
            </value>
            <value>
                <fullName>Hogar</fullName>
            </value>
            <value>
                <fullName>Mayorista</fullName>
            </value>
            <value>
                <fullName>Establecimiento Comercial</fullName>
            </value>
            <value>
                <fullName>Dorado</fullName>
            </value>
            <value>
                <fullName>Plata</fullName>
            </value>
            <value>
                <fullName>Bronce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>