force-app/main/default/objects/Account/fields/cu_Clasificacion_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>cu_Clasificacion_de_Cliente__c</fullName>
    <label>Clasificación de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directo</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Consumidor</fullName>
            </value>
            <value>
                <fullName>Integrador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>