force-app/main/default/objects/Account/fields/cu_Clasificacion_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>cu_Clasificacion_Distribuidor__c</fullName>
    <label>Clasificación del distribuidor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Naranja</fullName>
            </value>
            <value>
                <fullName>Oro</fullName>
            </value>
            <value>
                <fullName>Plata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>