force-app/main/default/objects/Account/fields/cu_colaborador_grupo_italcol__c.field-meta.xml
<CustomField>
    <fullName>cu_colaborador_grupo_italcol__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opción de sí está empleado</description>
    <label>Colaborador de grupo Italcol</label>
    <type>Checkbox</type>
</CustomField>