force-app/main/default/objects/Account/fields/cu_compania__c.field-meta.xml
<CustomField>
    <fullName>cu_compania__c</fullName>
    <description>Compañia a la que pertenece el empleado</description>
    <label>Compañia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Italcol</fullName>
            </value>
            <value>
                <fullName>Casablanca</fullName>
            </value>
            <value>
                <fullName>Santa Reyes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>