force-app/main/default/objects/Account/fields/cu_Contacto_Preferido__c.field-meta.xml
<CustomField>
    <fullName>cu_Contacto_Preferido__c</fullName>
    <label>Canal de contacto preferido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Celular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>