force-app/main/default/objects/Account/fields/cu_descuento_colaborador__c.field-meta.xml
<CustomField>
    <fullName>cu_descuento_colaborador__c</fullName>
    <description>Descuentos aplicados al empleado</description>
    <label>Descuentos (Colaborador)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>