force-app/main/default/objects/Account/fields/cu_descuentos__c.field-meta.xml
<CustomField>
    <fullName>cu_descuentos__c</fullName>
    <description>Descuentos aplicados al cliente</description>
    <label>Descuentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>