force-app/main/default/objects/Account/fields/cu_ecommerce__c.field-meta.xml
<CustomField>
    <fullName>cu_ecommerce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene eCommerce</label>
    <type>Checkbox</type>
</CustomField>