force-app/main/default/objects/Account/fields/cu_empleado__c.field-meta.xml
<CustomField>
    <fullName>cu_empleado__c</fullName>
    <description>Opción de sí está empleado</description>
    <label>Empleado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>