force-app/main/default/objects/Account/fields/cu_Empresas_Aliadas__c.field-meta.xml
<CustomField>
    <fullName>cu_Empresas_Aliadas__c</fullName>
    <label>Empresas Aliadas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>San Marino</fullName>
            </value>
            <value>
                <fullName>Aurofarma</fullName>
            </value>
            <value>
                <fullName>Porcigenes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>