force-app/main/default/objects/Account/fields/cu_EquipoTecnico__c.field-meta.xml
<CustomField>
    <fullName>cu_EquipoTecnico__c</fullName>
    <label>Equipo Técnico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propio</fullName>
            </value>
            <value>
                <fullName>Asesores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>