force-app/main/default/objects/Account/fields/cu_fecha_primera_compra__c.field-meta.xml
<CustomField>
    <fullName>cu_fecha_primera_compra__c</fullName>
    <description>Fecha de la primera compra</description>
    <label>Fecha de Primera Compra</label>
    <type>DateTime</type>
</CustomField>