force-app/main/default/objects/Account/fields/cu_frecuencia_visita__c.field-meta.xml
<CustomField>
    <fullName>cu_frecuencia_visita__c</fullName>
    <description>Información sobre la frecuencia de visitas</description>
    <label>Frecuencia de visita</label>
    <type>TextArea</type>
</CustomField>