force-app/main/default/objects/Account/fields/cu_Licita_Estado__c.field-meta.xml
<CustomField>
    <fullName>cu_Licita_Estado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Licita y o vende a empresas del estado?</label>
    <type>Checkbox</type>
</CustomField>