force-app/main/default/objects/Account/fields/cu_ManejoInformacion__c.field-meta.xml
<CustomField>
    <fullName>cu_ManejoInformacion__c</fullName>
    <label>Manejo de Información</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Software especializado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>