force-app/main/default/objects/Account/fields/cu_metodo_pago__c.field-meta.xml
<CustomField>
    <fullName>cu_metodo_pago__c</fullName>
    <description>Método de pago utilizado por el cliente</description>
    <label>Método de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>