force-app/main/default/objects/Account/fields/cu_misma_direccion_facturacion__c.field-meta.xml
<CustomField>
    <fullName>cu_misma_direccion_facturacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es la misma Dirección de facturación?</label>
    <type>Checkbox</type>
</CustomField>