force-app/main/default/objects/Account/fields/cu_numero_puntos__c.field-meta.xml
<CustomField>
    <fullName>cu_numero_puntos__c</fullName>
    <description>Puntos de fidelidad acumulados</description>
    <label>Número de puntos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>