force-app/main/default/objects/Account/fields/cu_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>cu_PaymentTerms__c</fullName>
    <label>Condiciones de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>