force-app/main/default/objects/Account/fields/cu_precio_promedio__c.field-meta.xml
<CustomField>
    <fullName>cu_precio_promedio__c</fullName>
    <description>Precio promedio de lo que compra un cliente</description>
    <label>Precio Promedio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>