force-app/main/default/objects/Account/fields/cu_prioridad__c.field-meta.xml
<CustomField>
    <fullName>cu_prioridad__c</fullName>
    <description>Nivel de prioridad del cliente</description>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oro</fullName>
            </value>
            <value>
                <fullName>Plata</fullName>
            </value>
            <value>
                <fullName>Bronce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>