force-app/main/default/objects/Account/fields/cu_productos_comprados__c.field-meta.xml
<CustomField>
    <fullName>cu_productos_comprados__c</fullName>
    <description>Lista de productos comprados</description>
    <label>Productos comprados</label>
    <type>TextArea</type>
</CustomField>