force-app/main/default/objects/Account/fields/cu_recibir_domicilio__c.field-meta.xml
<CustomField>
    <fullName>cu_recibir_domicilio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Quisiera recibir a domicilio?</label>
    <type>Checkbox</type>
</CustomField>