force-app/main/default/objects/Account/fields/cu_Redes_Sociales__c.field-meta.xml
<CustomField>
    <fullName>cu_Redes_Sociales__c</fullName>
    <label>¿Tiene redes sociales?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No tiene</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>