force-app/main/default/objects/Account/fields/cu_Regional__c.field-meta.xml
<CustomField>
    <fullName>cu_Regional__c</fullName>
    <label>Regional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional Oriente</fullName>
            </value>
            <value>
                <fullName>Regional Costa Norte</fullName>
            </value>
            <value>
                <fullName>Regional Centro</fullName>
            </value>
            <value>
                <fullName>Regional Antioquia</fullName>
            </value>
            <value>
                <fullName>Regional Occidente</fullName>
            </value>
            <value>
                <fullName>Regional Panamá</fullName>
            </value>
            <value>
                <fullName>Regional Ecuador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>