force-app/main/default/objects/Account/fields/cu_SensibleFidelizacion__c.field-meta.xml
<CustomField>
    <fullName>cu_SensibleFidelizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensible a planes de fidelización</label>
    <type>Checkbox</type>
</CustomField>