force-app/main/default/objects/Account/fields/cu_SensibleMercadeo__c.field-meta.xml
<CustomField>
    <fullName>cu_SensibleMercadeo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensible planes de mercadeo</label>
    <type>Checkbox</type>
</CustomField>