force-app/main/default/objects/Account/fields/cu_subcanal__c.field-meta.xml
<CustomField>
    <fullName>cu_subcanal__c</fullName>
    <description>Subcategoría del canal de distribución</description>
    <label>Subcanal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cu_canal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>cu_subcanal</valueSetName>
    </valueSet>
</CustomField>