force-app/main/default/objects/Account/fields/cu_Tamano_Bodega__c.field-meta.xml
<CustomField>
    <fullName>cu_Tamano_Bodega__c</fullName>
    <label>Tamaño de bodega (M2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>