force-app/main/default/objects/Account/fields/cu_ticket_promedio__c.field-meta.xml
<CustomField>
    <fullName>cu_ticket_promedio__c</fullName>
    <description>Importe promedio de compra</description>
    <label>Ticket promedio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>