force-app/main/default/objects/Account/fields/cu_tipo_cliente__c.field-meta.xml
<CustomField>
    <fullName>cu_tipo_cliente__c</fullName>
    <description>Clasificación del cliente</description>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fidelizado</fullName>
            </value>
            <value>
                <fullName>Perdido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>