force-app/main/default/objects/Account/fields/cu_tipo_documento__c.field-meta.xml
<CustomField>
    <fullName>cu_tipo_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIT</fullName>
            </value>
            <value>
                <fullName>RUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>