force-app/main/default/objects/Account/fields/cu_tipo_empresa__c.field-meta.xml
<CustomField>
    <fullName>cu_tipo_empresa__c</fullName>
    <label>Tipo de Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pública</fullName>
            </value>
            <value>
                <fullName>Privada</fullName>
            </value>
            <value>
                <fullName>Mixta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>