force-app/main/default/objects/Account/fields/cu_tipo_establecimiento__c.field-meta.xml
<CustomField>
    <fullName>cu_tipo_establecimiento__c</fullName>
    <description>Tipo de establecimiento del cliente</description>
    <label>Tipología (Tipo de establecimiento)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cu_subcanal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abono</fullName>
            </value>
            <value>
                <fullName>Asaderos Barrio</fullName>
            </value>
            <value>
                <fullName>Asaderos Cadena</fullName>
            </value>
            <value>
                <fullName>Avícola</fullName>
            </value>
            <value>
                <fullName>Cadena Hotelera</fullName>
            </value>
            <value>
                <fullName>Cadenas</fullName>
            </value>
            <value>
                <fullName>Cafetería</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Carry</fullName>
            </value>
            <value>
                <fullName>Casinos</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Clínicas</fullName>
            </value>
            <value>
                <fullName>Clubes</fullName>
            </value>
            <value>
                <fullName>Comidas Rápidas</fullName>
            </value>
            <value>
                <fullName>Corrientazo</fullName>
            </value>
            <value>
                <fullName>Directa</fullName>
            </value>
            <value>
                <fullName>Distribuidores Especiales</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Empleados</fullName>
            </value>
            <value>
                <fullName>Establecimientos Comerciales</fullName>
            </value>
            <value>
                <fullName>Estanda</fullName>
            </value>
            <value>
                <fullName>Expendio De Carnes</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Farmacias</fullName>
            </value>
            <value>
                <fullName>Fruver</fullName>
            </value>
            <value>
                <fullName>Fundaciones</fullName>
            </value>
            <value>
                <fullName>Gallina En Pie</fullName>
            </value>
            <value>
                <fullName>Grandes Transformadores</fullName>
            </value>
            <value>
                <fullName>Granero</fullName>
            </value>
            <value>
                <fullName>Hard Discount</fullName>
            </value>
            <value>
                <fullName>Hogares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>