force-app/main/default/objects/Account/fields/cu_Tipo_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>cu_Tipo_Tarjeta__c</fullName>
    <label>Tipo Tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarjeta Débito</fullName>
            </value>
            <value>
                <fullName>Tarjeta Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>