force-app/main/default/objects/Account/fields/cu_TransporteGranjas__c.field-meta.xml
<CustomField>
    <fullName>cu_TransporteGranjas__c</fullName>
    <label>Transporte a granjas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canal Propio</fullName>
            </value>
            <value>
                <fullName>Tercerizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>