force-app/main/default/objects/Account/fields/cu_UnidadesNegocio__c.field-meta.xml
<CustomField>
    <fullName>cu_UnidadesNegocio__c</fullName>
    <label>Unidades de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>