force-app/main/default/objects/Account/fields/cu_valor_acumulado_descuento_aplicado__c.field-meta.xml
<CustomField>
    <fullName>cu_valor_acumulado_descuento_aplicado__c</fullName>
    <label>Valor acumulado de descuento aplicado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>