force-app/main/default/objects/Account/fields/cu_Ventas_Online__c.field-meta.xml
<CustomField>
    <fullName>cu_Ventas_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Tiene ventas en línea?</label>
    <type>Checkbox</type>
</CustomField>