force-app/main/default/objects/Account/fields/cu_VolumenProduccion__c.field-meta.xml
<CustomField>
    <fullName>cu_VolumenProduccion__c</fullName>
    <label>Volumen semanal de Producción</label>
    <length>100</length>
    <type>Text</type>
</CustomField>