force-app/main/default/objects/Account/fields/Destino_Compra__c.field-meta.xml
<CustomField>
    <fullName>Destino_Compra__c</fullName>
    <label>Destino de la Compra</label>
    <type>TextArea</type>
</CustomField>