force-app/main/default/objects/Account/fields/Detalle_Direccion_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Direccion_de_Envio__c</fullName>
    <label>Detalle Dirección de Envío</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>