force-app/main/default/objects/Account/fields/Detalle_Direccion_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Direccion_Facturacion__c</fullName>
    <label>Detalle Dirección de Facturación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>