force-app/main/default/objects/Account/fields/UEH_camara_comercio__c.field-meta.xml
<CustomField>
    <fullName>UEH_camara_comercio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Camara de Comercio</label>
    <type>Checkbox</type>
</CustomField>